--- a/cwl_wrapper_test/tests/input_basic_example.yml
+++ b/cwl_wrapper_test/tests/input_basic_example.yml
@@ -1,8 +1,8 @@
   input_reads: 
     class: File
-    location: /gpfs/cavatica_tools/test/NA12878_20k.b37.bam
+    location: /home/laura/PycharmProjects/vre-process_cwl-executor/cwl_wrapper_test/tests/NA12878.bam
   biospecimen_name: "hg38"
   output_basename: "test"
   indexed_reference_fasta:
     class: File 
-    location: /gpfs/cavatica_tools/test/hg38.fa
+    location: /home/laura/PycharmProjects/vre-process_cwl-executor/cwl_wrapper_test/tests/hg38.fa
