--- a/cwl_wrapper_test/tests/input_cram2bam.yml
+++ b/cwl_wrapper_test/tests/input_cram2bam.yml
@@ -1,6 +1,6 @@
-  input_bam:
+  input_cram:
     class: File
-    location: /home/laura/PycharmProjects/vre-process_cwl-executor/cwl_wrapper_test/tests/NA12878.bam
+    location: /home/laura/PycharmProjects/vre-process_cwl-executor/cwl_wrapper_test/tests/NA12878.cram
   output_basename: "mytest"
   indexed_reference_fasta:
     class: File
