changes before the other CWL

--- a/cwl_wrapper_test/tests/input_cram2bam.yml
+++ b/cwl_wrapper_test/tests/input_cram2bam.yml
@@ -5,3 +5,6 @@
   indexed_reference_fasta:
     class: File
     location: /home/laura/PycharmProjects/vre-process_cwl-executor/cwl_wrapper_test/tests/hg38.fa
+  indexed_reference_fai:
+      class: File
+      location: /home/laura/PycharmProjects/vre-process_cwl-executor/cwl_wrapper_test/tests/hg38.fa.fai
