--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-testpaths = mg_process_test/tests
+testpaths = tests
 norecursedirs = data tmp* env docs apps basic_modules *.egg_info TADbit-master
