refactor packed cwl method. added method to create input and output list from CWL

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ pylint
 pytest
 cwltool
 git+https://github.com/inab/openvre-tool-api.git
+git+https://github.com/common-workflow-language/cwl-utils.git
