--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 PyYAML
-ruamel.yaml<=0.16.10,>=0.12.4
+ruamel.yaml<=0.16.5,>=0.12.4
 wheel
 pylint
 pytest
-cwltool
+cwltool<=2.0.20200312183052
 git+https://github.com/inab/openvre-tool-api.git
 git+https://github.com/common-workflow-language/cwl-utils.git
