--- a/tests/kfdrc_alignment/data/kf_alignment_cyoa_wf.yaml
+++ b/tests/kfdrc_alignment/data/kf_alignment_cyoa_wf.yaml
@@ -1,10 +1,20 @@
 biospecimen_name: hg38
 indexed_reference_fasta:
   class: File
-  location: /gpfs/openvre/public/refGenomes/hg38/hg38.fa
+  location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.fasta
   secondaryFiles:
     - class: File
       location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.fasta.fai
+    - class: File
+      location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.fasta.64.amb
+    - class: File
+      location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.fasta.64.ann
+    - class: File
+      location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.fasta.64.bwt
+    - class: File
+      location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.fasta.64.pac
+    - class: File
+      location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.fasta.64.sa
 knownsites:
   - class: File
     location: /home/user/kfdrc-workflows/data/1000G_omni2.5.hg38.vcf.gz
@@ -19,7 +29,7 @@ reference_dict:
   class: File
   location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.dict
 run_bam_processing: False
-run_pe_reads_processing: False
+run_pe_reads_processing: True
 run_se_reads_processing: False
 run_hs_metrics: False
 run_wgs_metrics: False
