--- a/tests/kfdrc_alignment/data/kf_alignment_cyoa_wf.yaml
+++ b/tests/kfdrc_alignment/data/kf_alignment_cyoa_wf.yaml
@@ -35,3 +35,14 @@ run_hs_metrics: False
 run_wgs_metrics: False
 run_agg_metrics: False
 run_gvcf_processing: False
+input_se_reads_list:
+  - class: File
+    location: /home/user/kfdrc-workflows/data/reads1_R1.fq
+  - class: File
+    location: /home/user/kfdrc-workflows/data/reads2_R1.fq
+  - class: File
+    location: /home/user/kfdrc-workflows/data/reads3_R1.fq
+input_se_rgs_list:
+  - \tID:reads1_R1\tLB:reads1_R1\tPL:reads1_R1\tSM:reads1_R1
+  - \tID:reads2_R1\tLB:reads2_R1\tPL:reads2_R1\tSM:reads2_R1
+  - \tID:reads3_R1\tLB:reads3_R1\tPL:reads3_R1\tSM:reads3_R1
