--- a/tests/kfdrc_alignment/data/kf_alignment_cyoa_wf.yaml
+++ b/tests/kfdrc_alignment/data/kf_alignment_cyoa_wf.yaml
@@ -1,7 +1,7 @@
-input_bam:
-  class: File
-  location: /home/user/kfdrc-workflows/data/C835.HCC1143.2.converted.realigned.base_recalibrated.bam
-biospecimen_name: HCC1143
+input_bam_list:
+  - class: File
+    location: /home/user/kfdrc-workflows/data/C835.HCC1143.2.converted.realigned.base_recalibrated.bam
+biospecimen_name: hg38
 indexed_reference_fasta:
   class: File
   location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.fasta
@@ -27,7 +27,7 @@ knownsites:
     location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.known_indels.vcf.gz
   - class: File
     location: /home/user/kfdrc-workflows/data/Mills_and_1000G_gold_standard.indels.hg38.vcf.gz
-output_basename: HCC1143
+output_basename: hg38
 reference_dict:
   class: File
   location: /home/user/kfdrc-workflows/data/Homo_sapiens_assembly38.dict
@@ -48,6 +48,7 @@ input_pe_mates_list:
     location: /home/user/kfdrc-workflows/data/C835.HCC1143.2.converted.pe_1.fastq
   - class: File
     location: /home/user/kfdrc-workflows/data/C835.HCC1143.2.converted.pe_2.fastq
-input_se_rgs_list:
+input_pe_rgs_list:
   - \tID:C835.HCC1143.2.converted.pe_1.fastq\tLB:C835.HCC1143.2.converted.pe_1.fastq\tPL:C835.HCC1143.2.converted.pe_1.fastq\tSM:C835.HCC1143.2.converted.pe_1.fastq
   - \tID:C835.HCC1143.2.converted.pe_2.fastq\tLB:C835.HCC1143.2.converted.pe_2.fastq\tPL:C835.HCC1143.2.converted.pe_2.fastq\tSM:C835.HCC1143.2.converted.pe_2.fastq
+
