--- a/tests/kfdrc_alignment/data/kf_alignment_cyoa_wf.yaml
+++ b/tests/kfdrc_alignment/data/kf_alignment_cyoa_wf.yaml
@@ -27,7 +27,7 @@ knownsites:
     location: /gpfs/cavatica_tools/test_alignment_wf_cyoa/Homo_sapiens_assembly38.known_indels.vcf.gz
   - class: File
     location: /gpfs/cavatica_tools/test_alignment_wf_cyoa/Mills_and_1000G_gold_standard.indels.hg38.vcf.gz
-output_basename: hg38
+output_basename: output
 reference_dict:
   class: File
   location: /gpfs/cavatica_tools/test_alignment_wf_cyoa/Homo_sapiens_assembly38.dict
