--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ venv/*
 .pytest_cache
 
 # openvre
-/tests/basic/run00*
+*/run00*
 /VRE_CWL_RUNNER.log
 /tests/basic/config.json
 /tests/basic/in_metadata.json
@@ -25,3 +25,4 @@ venv/*
 
 # PyCharm
 .idea
+/tests/kfdrc_alignment/run000/
