--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,8 @@ wheel
 pylint
 pytest
 cwltool<=2.0.20200312183052
+cwlprov~=0.1.1
 git+https://github.com/inab/openvre-tool-api.git
+bdbag~=1.5.6
+requests~=2.23.0
+rdflib~=4.2.2
