--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-ruamel.yaml<=0.16.5,>=0.12.4
+ruamel.yaml==0.16.5
 wheel
 pylint
 pytest
-cwltool<=2.0.20200312183052
+cwltool
 cwlprov~=0.1.1
 git+https://github.com/inab/openvre-tool-api.git
 bdbag~=1.5.6
-requests~=2.23.0
-rdflib~=4.2.2
+requests==2.23.0
+rdflib==4.2.2
+git+https://github.com/inab/ro-crate-py.git
