--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-ruamel.yaml==0.16.5
-wheel
-pylint
-pytest
+ruamel.yaml
 cwltool
-cwlprov
-requests
-rdflib==4.2.2
-# pathlib2
 git+https://github.com/inab/openvre-tool-api.git
 git+https://github.com/inab/ro-crate-py.git
