--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 ruamel.yaml
 cwltool
-git+https://github.com/inab/openvre-tool-api.git
-git+https://github.com/inab/ro-crate-py.git
+git+https://github.com/inab/openvre-tool-api.git@master#egg=openvre-tool-api
+git+https://github.com/inab/ro-crate-py.git@master#egg=rocrate
